# cyber-drill-safe

./: .env.example  .gitignore  COMPETITOR_ANALYSIS.md  README.md  analysis.md  ecosystem.config.js  package-lock.json  package.json
.github/workflows/: build-client.yml
certs/: ext.cnf  openssl.cnf  server.crt  server.csr  server.key
client/: index.html  package-lock.json  package.json
client/app-main/: main.js  preload.js  (+1 more)
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
config/: accounts-input.example.json  windsurf-accounts.json
docker/: Dockerfile.gateway  Dockerfile.session  docker-compose.yml  nginx.conf  session-entrypoint.sh
docs/: DEPLOYMENT.md  accounts.example.json  openclaw-provider.example.json  sessions.example.json  windsurf-protocol.md  小白部署指南.md
scripts/: account-pool.ps1  check-refresh-tokens.sh  client-setup.ps1  cloud-deploy.sh  decode-capture.mjs  deploy-gateway.ps1  deploy-server.sh  find-firebase-key.sh  firebase-batch-login.sh  get-apikeys.sh  import-accounts.mjs  launch-windsurf-mitm.ps1  mitmproxy-addon.py  openclaw-setup.ps1  restart-gateway.ps1  seed-db.mjs  setup-docker-cluster.sh  setup-gateway.ps1  smoke-test.ps1  start-gateway.ps1  start-local-proxy.ps1  sync-sessions.sh  test-register-rpc.sh  windsurf-registrar.js
src/: account-automation.js  api-server.js  connect-proto.js  database.js  lab-server.js  local-proxy.js  protocol-adapter.js  session-manager.js  start-server.js  user-manager.js
(+12 files in other folders)
