[package]
name = "wind-client"
version = "1.0.0"
edition = "2021"

[lib]
name = "wind_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
